Fix overflow estimation in safari 9

--- a/app/styles/modules/common/lightbox.scss
+++ b/app/styles/modules/common/lightbox.scss
@@ -529,6 +529,7 @@
             margin-right: 0;
         }
         &:last-child {
+            flex-basis: 100%;
             margin: .1rem 0;
             min-width: 100%;
         }
